--- a/main.css
+++ b/main.css
@@ -1,9 +1,10 @@
 body {
     align-content: center;
+    backgound-image: url ('butler.jpg');
+    background-repeat: no-repeat;
     max-width: 80%;
     font-family: Arial;
     font-size:100%;
-    background-color: #2F4F4F;
     margin: auto;  
 }
 
