--- a/main.css
+++ b/main.css
@@ -1,23 +1,33 @@
 body {
     align-content: center;
-    backgound-image: url ('butler.jpg');
-    background-repeat: no-repeat;
-    max-width: 80%;
+    max-width: 95%;
     font-family: Arial;
     font-size:100%;
     margin: auto;  
 }
 
-* {
-    margin: 0;
+.butler-background {
+    background-image: url(butler.jpg);
+    background-size: cover;
+    background-position:center;
+    height:800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    background-repeat: no-repeat;
+    background-attachment:fixed;
 }
+
+.butler-background h1 {
+    font-size: 500%;
+    background-color:black;
+}
+
 main {
-    width: 60%;
-    height: 450px;
-    float: left;
-    background-color: #f5f5dc;
-    color: #2F4F4F;
-    margin-left: auto;
+    width: 100%;
+    height: 800px;
 }
 
 main h2 {
@@ -46,10 +56,10 @@ a:hover, a:focus {
 }
 
 header {
-      background-color: #779ecb;
-      color: #f5f5f5;
-      padding: 1em;
-      
+      background-color: black;
+      padding-top: 2em;
+      padding-bottom: 2em;
+      color: #f5f5f5;      
   }
   
   section li{
@@ -69,10 +79,6 @@ h2 {
     text-align:center;
     font-variant:small-caps;
     font-weight: bold;
-}
-
-#title_name {
-    font-size: 300%;
 }
   
   #navigation {
@@ -122,9 +128,10 @@ address a {
 
 footer {
     clear: both;
-    padding-top: .7em;
+    padding-top: .5em;
+    padding-bottom: 1.1em;
      text-align:center;
-    background-color:#d98872;
+    background-color:black;
   }
 
   footer p {
