--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ body {
     max-width: 95%;
     font-family: Arial;
     font-size:100%;
+    min-width: 50%;
     margin: auto;  
 }
 
@@ -13,16 +14,21 @@ body {
     height:800px;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
+    text-align: center;
     color:white;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     background-repeat: no-repeat;
     background-attachment:fixed;
 }
 
-.butler-background h1 {
-    font-size: 500%;
-    background-color:black;
+.butler-background h3{
+    background-color: black;
+    font-size: 1.8rem;
+    padding-left: 1em;
+    padding-right: 1em;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 main {
@@ -30,13 +36,9 @@ main {
     height: 800px;
 }
 
-main h2 {
-    color:#2F4F4F
-}
-
 aside {
     width: 38%;
-    float: right;
+    float: left;
     color: #F5F5DC;
     margin-right: auto;
 }
@@ -49,16 +51,18 @@ a {
 
 a:hover, a:focus {
     text-shadow: 2px 2px 5px rgba(0, 0, 40, 0.6);
-    font-style: italic;
-    background-color:#779ecb;
-    color:#F5F5DC;
+    font-style: bold;
+    border-radius: 15px;
+    border: 2px solid #333;
+    background-color:#394b5f;
     padding: .20em .5em .25em .5em;
 }
 
 header {
       background-color: black;
-      padding-top: 2em;
-      padding-bottom: 2em;
+      padding-top: .5em;
+      text-align: center;
+      padding-bottom: .5em;
       color: #f5f5f5;      
   }
   
@@ -67,10 +71,13 @@ header {
   }
 
   h1 {
-    color: #F5F5DC;
-    text-shadow: 2px 2px black;
-    text-align:center;
-    font-variant:small-caps;
+    font-family: 'Garamond', serif;
+    font-size: 3.5rem;
+    margin: 0%;
+    font-weight: 700;
+    text-transform: capitalize;
+    Letter-spacing: 1px;
+    color: white;
   }
 
 h2 {
@@ -81,22 +88,24 @@ h2 {
     font-weight: bold;
 }
   
-  #navigation {
+  #footer_nav {
     border-bottom: 1px;
-    background-color: #708090;
+    background-color: black;
     border-top: 1px;
+    justify-content: space-between;
+    flex-wrap: wrap;
     list-style-type: none;
     margin: 0;
-    padding: .25em;
+    padding: .35em;
  }
 
 nav ul li {
      display: inline-block;
-    padding: 0 1.5em;
+    padding: 0 2em;
 }
 
 nav ul li a {
-    color: #F5f5dc;
+    color: white;
     font-size: 120%;
     font-weight: bold;
     font-variant: small-caps;
@@ -119,13 +128,6 @@ section img {
     
 }
 
-address a {
-    color: #2F4F4F;
-    font-style: normal;
-    font-weight: bold;
-
-}
-
 footer {
     clear: both;
     padding-top: .5em;
@@ -136,8 +138,6 @@ footer {
 
   footer p {
     padding-top:0;
-    color:#2F4F4F;
     font-style: italic;
   }
   
-
