--- a/main.css
+++ b/main.css
@@ -1,17 +1,20 @@
 body {
     align-content: center;
-    max-width: 95%;
     font-family: Arial;
     font-size:100%;
-    min-width: 50%;
-    margin: auto;  
+    width: 100vw;
+    height: 100vh;
+    margin: 0 auto;
+    padding: 0;
+    background-color: #FFFFF0;
 }
 
 .butler-background {
     background-image: url(butler.jpg);
     background-size: cover;
     background-position:center;
-    height:800px;
+    height:84vh;
+    width: 100vw;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -32,33 +35,117 @@ body {
     margin-bottom: 0;
 }
 
-main {
-    width: 100%;
-    height: 800px;
+fieldset {
+    border: 2px solid #800020; 
+  padding: 1em;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
+  background-color: #FFFFF0;
+  align-items: center;
 }
 
-aside {
-    width: 38%;
+main {
+    border-radius: 10px;
+    height:84vh;
+    width:49vw;
+    min-width:49vw;
+    background-color: #F5F5DC;
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+#mainform {
+    float:left;
+    height: 84vh;
+    width: 49vw;
+    align-content: center;
+    padding: 0;
+    margin: 0;
+}
+
+#mainform h2 {
+    font-variant: small-caps;
+    font-size: 250%;
+}
+label {
     float: left;
-    color: #F5F5DC;
-    margin-right: auto;
+    width: 5em;
+    margin-left: 30%;
+    text-align:right;
+    align-content: center;
+}
+
+input {
+    width:25em;
+    margin-left: 5%;
+    margin-bottom: .25em;
+}
+
+input[type="submit"] {
+    background-color: black; 
+    font-weight: bold;
+    font-variant:small-caps;
+    margin-left: 30%;
+    font-size: 120%;
+    color: #FFFFF0; 
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+input[type="submit"]:hover {
+    background-color: #800020;
+}
+
+#sidebarA {
+    width: 10vw;
+    height: 84vh;
+    float: left;
+    color: white;
+    height: 800px;
+    background-color:#800020;
+    margin: 0 0 0 0;
+    text-align: center;
+    align-content: center;
+}
+
+textarea {
+    height: 25em;
+    width: 25em;
+    margin-left: 5%;
+    margin-bottom: .25em;    
+}
+
+#sidebarB {
+    width: 40vw;
+    height: 84vh;
+    float: right;
+    border-left: 5px solid black;
+    height: 800px;
+    color: white;
+    background-color: #800020;
+    align-content: center;
+    text-align: center;  
 }
 
 a {
     text-decoration: none;
-    color:#d98872;
     transition: text-shadow 0.3s ease;
 }
 
 a:hover, a:focus {
     text-shadow: 2px 2px 5px rgba(0, 0, 40, 0.6);
+    font-style: bold;
     border-radius: 20px;
     border: 2px solid #333;
-    background-color:#394b5f;
+    background-color:black;
     padding: .20em .5em .25em .5em;
 }
 
 header {
+    width: 100vw;
+    height: 8vh;
       background-color: black;
       padding-top: .5em;
       text-align: center;
@@ -76,6 +163,10 @@ header {
     color: white;
   }
 
+  h2 {
+    text-align: center;
+  }
+
   #footer_nav {
     border-bottom: 1px;
     background-color: black;
@@ -84,39 +175,41 @@ header {
     flex-wrap: wrap;
     list-style-type: none;
     margin: 0;
-    padding: .35em;
+    padding: .35em 2em;
+ }
+
+ #footer_nav li {
+    display: inline-block;
+    padding: 0 2em 0 2em;
+ }
+
+ #footer_nav a:hover, a:focus {
+    text-shadow: 2px 2px 5px rgba(0, 0, 40, 0.6);
+    font-style: bold;
+    border-radius: 20px;
+    border: 2px solid #333;
+    background-color:#800020;
+    padding: .20em .5em .25em .5em;
  }
 
 nav ul li {
-     display: inline-block;
-    padding: 0 2em;
+     display:flex;
+    padding: 2em 0 2em 0;
 }
 
 nav ul li a {
     color: white;
     font-size: 120%;
+    font-weight: bold;
     font-variant: small-caps;
     margin: 0;
     padding: 0;
 } 
-    
-section {
-    font-size: 120%;
-    margin: 2%;
-    }
-
-section img {
-    display: block;
-    height:auto;
-    width:auto;
-    max-width: 100%;
-    min-height: 100%;
-    margin: 0 auto;
-    
-}
 
 footer {
     clear: both;
+    width: 100vw;
+    height: 8vh;
     padding-top: .5em;
     padding-bottom: 1.1em;
      text-align:center;
@@ -125,6 +218,7 @@ footer {
 
   footer p {
     padding-top:0;
+    color: white;
     font-style: italic;
   }
   
