--- a/main.css
+++ b/main.css
@@ -171,7 +171,7 @@ input[type="reset"]:hover {
     height: 84vh;
     float: left;
     color: white;
-    height: 800px;
+    overflow: auto;
     background-color:#800020;
     margin: 0 0 0 0;
     text-align: center;
