--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body {
 
 #accordionExample {
   width: 80%;
-  max-width: 600px; 
+  max-width: 700px; 
   margin: 0 auto; 
 }
 
@@ -20,7 +20,7 @@ body {
   border: 1px solid #ddd; 
 }
 
-#accordion-header {
+.accordion-header {
     background-color: #800020;
     color: white; 
 }
