--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ body {
     gap: 20px;
     flex-wrap: wrap;
     margin: 0 auto;
-    padding: 2em;
+    padding: 0 2em;
 }
 
 @media (max-width: 250px) {
