--- a/main.css
+++ b/main.css
@@ -85,6 +85,7 @@ article h2 {
 
 article p {
     margin-top: 0;
+    font-size: 120%;
     margin-right: .5em;
     margin-bottom: .5em;
     text-indent: 1em;
@@ -93,7 +94,7 @@ article p {
 
 article img {
     float: left;
-    margin: 0 1.5em 1em 0;
+    margin: 0 1.5em 1em 1em;
 }
 
 .butler-background {
