--- a/main.css
+++ b/main.css
@@ -86,7 +86,7 @@ article h2 {
 article p {
     margin-top: 0;
     font-size: 120%;
-    margin-right: .5em;
+    margin-left: .5em;
     margin-bottom: .5em;
     text-indent: 1em;
     
